--- a/src/main-styles.scss
+++ b/src/main-styles.scss
@@ -87,12 +87,15 @@ html, body {
 }
 
 @media only screen and (max-width: 720px) {
+        html {
+            background: whitesmoke;
+        }
     .container {
         height: 100%
     }
 
     .profile {
-        height: 100%;
+        height: 250%;
         padding: 10% 5%;
     }
 
@@ -101,9 +104,17 @@ html, body {
         text-align: center;
     }
 
+    a {
+        color: $dark-orange
+    }
 
+    .profile-tags {
+  
+        margin: 3% 0%;
+        font-size: 250%;
+        box-shadow: 0px 0px 10px 2px $orange;
+    }
     p {
         font-size: 150%;
-        margin-bottom: 5%;
     }
 }
