--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -19,7 +19,8 @@
         font-size: 150%;
         text-transform: uppercase;
         letter-spacing: 2.5px;
-        padding: 10px;
+        text-align: left;
+        padding-left: 1vh;
     }
 
     .profile-content {
