--- a/src/main-styles.scss
+++ b/src/main-styles.scss
@@ -112,7 +112,7 @@ html, body {
   
         margin: 3% 0%;
         font-size: 250%;
-        box-shadow: 0px 0px 10px 2px $orange;
+        box-shadow: 0px 0px 10px 3.5px rgb(0 0 0 / 20%);
     }
     p {
         font-size: 150%;
