Wallet all media complete

--- a/src/app/pages/wallet/wallet.component.html
+++ b/src/app/pages/wallet/wallet.component.html
@@ -27,9 +27,9 @@
 
             <!-- Profile Display-->
             <div class="profile-content">
-                <div class="profile-tags title has-text-primary" [routerLink]="[wallets._id]">FUND WALLET</div>
-                <div class="profile-tags title has-text-primary" (click)="navigateWithdraw()">WITHDRAWAL</div>
-                <div class="profile-tags title has-text-primary" (click)="navigate()">MY CYCLES</div>
+                <div class="profile-tags title" [routerLink]="[wallets._id]">FUND WALLET</div>
+                <div class="profile-tags title" (click)="navigateWithdraw()">WITHDRAWAL</div>
+                <div class="profile-tags title" (click)="navigate()">MY CYCLES</div>
                 <div class="transactions">
                     <table class="table is-bordered is-fullwidth">
                         <thead style="width: fit-content;">
