--- a/src/app/pages/wallet/wallet.component.scss
+++ b/src/app/pages/wallet/wallet.component.scss
@@ -1,80 +1,143 @@
 @import '../../../main-styles.scss';
 
-.container {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    max-width: 1000px;
-    max-height: 680px;
-    justify-content: center;
-}
+@media only screen and (max-width: 720px) {
+    .container {
+        width: 100%;
+    }
 
-.profile {
-    display: flex;
-    flex-direction: column;
-    border-top-right-radius: 15px;
-    border-bottom-right-radius: 15px;
-    border-bottom-left-radius: 15px;
-    border-top-left-radius: 15px;
-    padding: 30px;
-    width: 70%;
-    box-shadow: 0 10px 30px rgba(0, 0, 0, .2);
-}
-
-.title {
-    font-family: 'Lato';
-    font-size: 20px;
-    text-transform: uppercase;
-    letter-spacing: 2.5px;
-    padding: 10px;
-}
-
-.profile-content {
-    display: flex;
-    background: white;
-    padding: 20px 20px;
-    height: 100%;
-    width: 100%;
-    flex-flow: wrap;
-    overflow-x: auto;
-
-    
-    .profile-tags {
+    .profile {
         display: flex;
-        flex-direction: row;
-        border-radius: 5px;
-        justify-content: center;
-        align-items: center;
-        margin: 5px;
-        background: $deep-yellow;
-        width: 30%;
-        height: 35%;
-        flex-grow: 1;
-        font-size: 30px;
+        flex-direction: column;
+    }
 
-        &:hover {
-            box-shadow: 1.5px 1.5px $orange;
-            transition: ease-in-out 0.2s;
-            cursor: pointer;
+    .title {
+        text-align: left;
+        font-size: 150%;
+    }
+
+    a {
+        color: red;
+    }
+
+    .profile-content {
+        display: flex;
+        background: white;
+        flex-flow: wrap;
+
+        .profile-tags {
+            display: flex;
+            flex-direction: row;
+            border-radius: 5px;
+            align-items: center;
+            text-align: center;
+            margin: 5px;
+            background: #c6dd44;
+            width: 30%;
+            height: 10vh;
+            font-size: 2vh;
+            justify-content: center;
+            flex-grow: 1;
+        }
+
+        .transactions {
+            width: 100%;
+            justify-content: center;
+            overflow-x: auto;
+            overflow-y: hidden;
+        }
+
+        .flex {
+            display: flex;
+            flex-direction: row;
         }
     }
 
-    .transactions {
+    .navigation {
+        right: 15%;
+        font-size: 2vh;
+    }
+
+}
+
+@media only screen and (min-width: 720px) {
+    .container {
+        display: flex;
         width: 100%;
+        height: 100%;
+        max-width: 1000px;
+        max-height: 680px;
         justify-content: center;
     }
 
-    .flex {
+    .profile {
+        display: flex;
+        flex-direction: column;
+        border-top-right-radius: 15px;
+        border-bottom-right-radius: 15px;
+        border-bottom-left-radius: 15px;
+        border-top-left-radius: 15px;
+        padding: 30px;
+        width: 70%;
+        box-shadow: 0 10px 30px rgba(0, 0, 0, .2);
+    }
+
+    .title {
+        font-family: 'Lato';
+        font-size: 20px;
+        text-transform: uppercase;
+        letter-spacing: 2.5px;
+        padding: 10px;
+    }
+
+    .profile-content {
+        display: flex;
+        background: white;
+        padding: 20px 20px;
+        height: 100%;
+        width: 100%;
+        flex-flow: wrap;
+        overflow-x: hidden;
+
+
+        .profile-tags {
+            display: flex;
+            flex-direction: row;
+            border-radius: 5px;
+            justify-content: center;
+            align-items: center;
+            margin: 5px;
+            background: $deep-yellow;
+            width: 30%;
+            height: 35%;
+            flex-grow: 1;
+            font-size: 30px;
+
+            &:hover {
+                box-shadow: 1.5px 1.5px $orange;
+                transition: ease-in-out 0.2s;
+                cursor: pointer;
+            }
+        }
+
+        .transactions {
+            width: 100%;
+            justify-content: center;
+            overflow-x: auto;
+            overflow-y: hidden;
+        }
+
+        .flex {
+            display: flex;
+            flex-direction: row;
+        }
+    }
+
+    .navigation {
+        position: absolute;
+        right: 7%;
+        width: 20%;
+        height: 10%;
         display: flex;
         flex-direction: row;
     }
-}
-
-.navigation {
-    position: absolute;
-    right: 7%;
-    width: 20%;
-    height: 10%;
-    display: flex;
-    flex-direction: row;
 }
