--- a/src/main-styles.scss
+++ b/src/main-styles.scss
@@ -26,8 +26,10 @@ html {
     background: linear-gradient(to right top, $deep-yellow, $orange);
 }
 
-html, body {
+html,
+body {
     height: 100%;
+
     h3 {
         font-size: 150%;
         margin-bottom: 5%;
@@ -87,9 +89,10 @@ html, body {
 }
 
 @media only screen and (max-width: 720px) {
-        html {
-            background: whitesmoke;
-        }
+    html {
+        background: whitesmoke;
+    }
+
     .container {
         height: 100%
     }
@@ -99,21 +102,17 @@ html, body {
         padding: 10% 5%;
     }
 
-    .title {
-        font-size: 250%;
-        text-align: center;
-    }
-
     a {
         color: $dark-orange
     }
 
     .profile-tags {
-  
+
         margin: 3% 0%;
         font-size: 250%;
         box-shadow: 0px 0px 10px 3.5px rgb(0 0 0 / 20%);
     }
+
     p {
         font-size: 150%;
     }
