--- a/src/app/pages/cycle/new-cycle/new-cycle.component.html
+++ b/src/app/pages/cycle/new-cycle/new-cycle.component.html
@@ -38,7 +38,7 @@
               <button class="button is-success" type="submit">
                 Create
               </button>
-              <button class="button is-danger" routerLink="/cycle">Back</button>
+              <button class="button is-danger" routerLink="/adminprivateaccess">Back</button>
 
             </p>
           </div>
