--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -1,10 +1,14 @@
 @import '../../../main-styles.scss';
 
-@media only screen and (min-width: 320px) {
+@media only screen and (max-width: 720px) {
     html {
         background: white;
     }
 
+    a {
+        color: $dark-orange;
+    }
+    
     .container {
         height: 100%;
         justify-content: center;
