--- a/src/app/pages/wallet/my-cycles/my-cycles.component.html
+++ b/src/app/pages/wallet/my-cycles/my-cycles.component.html
@@ -8,7 +8,7 @@
                 </a>
             </div>
 
-            <button class="button is-danger has-text-white" routerLink="/wallet">To Wallet</button>
+            <button class="button is-danger has-text-white" routerLink="/wallet">Back To Wallet </button>
         </div>
         <div class="profile has-background-light">
             <h1 class="title has-text-primary">MY CYCLE DETAILS</h1>
@@ -18,9 +18,9 @@
                     <div class="card-content">
                         <div class="media">
                             <div class="media-left">
-                                <figure class="image is-48x48">
+                                <!--<figure class="image is-48x48">
                                     <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
-                                </figure>
+                                </figure>-->
                             </div>
                             <div class="media-content">
                                 <p class="title is-4">{{ wallet._id }}</p>
